# metametapost

./: .gitignore  .gitmodules  ChangeLog.md  LICENSE  cabal.project  metametapost.cabal  stack.yaml
output/: Makefile
slides/: .gitignore  Makefile  mmp-with-notes.tex  mmp.lhs  mmp.tex
slides/figures/: box2.mps  modules.mps  optics-hierarchy.mps
src/: MetaMetaPost.hs
src/MetaMetaPost/: Color.hs  DSL.hs  Demos.hs  Error.hs  PrettyPrinter.hs  Renamer.hs  STLC.hs  Simplifier.hs  TypeChecker.hs  TypeInferrer.hs  Types.hs
